--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,16 @@
-<div *ngIf="hero">
-  <h2>{{ hero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{hero.id}}</div>
-  <div>
+<div class="row" *ngIf="hero">
+  <div class="col-sm-12">
+    <h2>{{ hero.name | uppercase }} Details</h2>
+  </div>
+  <div class="col-sm-12">
+    <span>id: </span>{{hero.id}}
+  </div>
+  <div class="col-sm-12">
     <label>name:
-      <input [(ngModel)]="hero.name" placeholder="name"/>
+      <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
-  <button (click)="goBack()">go back</button>
+  <div class="col">
+    <button (click)="goBack()">go back</button>
+  </div>
 </div>
