--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,7 @@
-<div *ngIf="messageService.messages.length">
-
-  <h2>Messages</h2>
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+<div class="row" *ngIf="messageService.messages.length">
+  <div class="col-sm-12">
+    <h2>Messages</h2>
+    <button class="clear" (click)="messageService.clear()">clear</button>
+  </div>
+  <div class="col-sm-12 border" *ngFor='let message of messageService.messages'> {{message}} </div>
 </div>
